# sizer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Sizer.sln  Sizer.vcproj  Sizer.vcxproj  Sizer.vcxproj.filters  build.bat  changelog.md  changelog.txt  readme.md  readme.txt
.github/workflows/: main.yml
src/: debuginfo.cpp  debuginfo.hpp  main.cpp  mmapfile.cpp  mmapfile.h  pdb_typetable.cpp  pdb_typetable.hpp  pdbfile.cpp  pdbfile.hpp  pe_utils.cpp  pe_utils.hpp  types.hpp
src/raw_pdb/: PDB.cpp  PDB_CoalescedMSFStream.cpp  PDB_CoalescedMSFStream.h  PDB_DBIStream.cpp  PDB_DBIStream.h  PDB_DBITypes.h  PDB_DirectMSFStream.cpp  PDB_DirectMSFStream.h  PDB_IPIStream.cpp  PDB_InfoStream.cpp  PDB_InfoStream.h  PDB_ModuleInfoStream.cpp  PDB_ModuleInfoStream.h  PDB_PCH.h  PDB_Types.h
